--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 #root {
   width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -52,6 +51,12 @@ header {
   text-align: center;
 }
 
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 header nav a {
   color: white;
   text-decoration: none;
@@ -72,7 +77,10 @@ footer {
   position: relative;
 }
 
-#isAuthenticated {
-  display: none;
-  color: beige;
+.auth-status {
+  color: white;
+}
+
+main {
+  padding-bottom: 2rem;
 }
